# stenny

./: README.md
backend/: main.py  pyproject.toml
frontend/: index.html  script.js  style.css
