[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LisaBM", email = "lmattrisch@msn.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "faster-whisper>=1.2.1",
    "numpy>=2.4.1",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]

[tool.uv]
package = false
